quil-rs/tests/snapshots/calibration_test__calibration_reset.quil.snap
---
source: quil-rs/tests/calibration_test.rs
expression: program.to_quil_or_debug()
---
DEFCAL RESET 0:
    FENCE 0
    DECLARE q0_unclassified REAL[2]
    PULSE 0 "rf_f12" gaussian(detuning: 0, duration: 6e-8, fwhm: 1.6e-8, phase: 0, scale: 0.5, t0: 3e-8)
    NONBLOCKING PULSE 0 "ro_tx" flat(detuning: 0, duration: 1.6e-6, iq: 1, phase: 0, scale: 0.1)
    NONBLOCKING CAPTURE 0 "ro_rx" boxcar_kernel(detuning: 0, duration: 1.6e-6, phase: 0, scale: 1) q0_unclassified[0]
    PRAGMA FILTER-NODE q0_unclassified "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q0_ro_rx/filter','publish':true,'params':{},'_type':'FilterNode'}"
    PRAGMA LOAD-MEMORY q0_unclassified "q0_unclassified[0]"
    PRAGMA FILTER-NODE q0_classified "{'module':'standard.filters.classifiers','filter_type':'SingleQLinear','source':'q0_ro_rx/filter','publish':false,'params':{'a':[1.0,0.0],'threshold':0.01},'_type':'FilterNode'}"
    PRAGMA FILTER-NODE q0 "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q0_classified','publish':true,'params':{},'_type':'FilterNode'}"
    FENCE 0
DEFCAL RESET 10:
    FENCE 10
    DECLARE q10_unclassified REAL[2]
    PULSE 10 "rf_f12" gaussian(detuning: 0, duration: 7e-8, fwhm: 1.7e-8, phase: 0, scale: 0.5, t0: 3e-8)
    NONBLOCKING PULSE 10 "ro_tx" flat(detuning: 0, duration: 1.6e-6, iq: 1, phase: 0, scale: 0.1)
    NONBLOCKING CAPTURE 10 "ro_rx" boxcar_kernel(detuning: 0, duration: 1.6e-6, phase: 0, scale: 1) q10_unclassified[0]
    PRAGMA FILTER-NODE q10_unclassified "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q10_ro_rx/filter','publish':true,'params':{},'_type':'FilterNode'}"
    PRAGMA LOAD-MEMORY q10_unclassified "q10_unclassified[0]"
    PRAGMA FILTER-NODE q10_classified "{'module':'standard.filters.classifiers','filter_type':'SingleQLinear','source':'q10_ro_rx/filter','publish':false,'params':{'a':[1.0,0.0],'threshold':0.01},'_type':'FilterNode'}"
    PRAGMA FILTER-NODE q10 "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q10_classified','publish':true,'params':{},'_type':'FilterNode'}"
    FENCE 10
DEFCAL RESET 100:
    FENCE 100
    DECLARE q100_unclassified REAL[2]
    PULSE 100 "rf_f12" gaussian(detuning: 0, duration: 8e-8, fwhm: 1.8e-8, phase: 0, scale: 0.5, t0: 3e-8)
    NONBLOCKING PULSE 100 "ro_tx" flat(detuning: 0, duration: 1.6e-6, iq: 1, phase: 0, scale: 0.1)
    NONBLOCKING CAPTURE 100 "ro_rx" boxcar_kernel(detuning: 0, duration: 1.6e-6, phase: 0, scale: 1) q100_unclassified[0]
    PRAGMA FILTER-NODE q100_unclassified "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q100_ro_rx/filter','publish':true,'params':{},'_type':'FilterNode'}"
    PRAGMA LOAD-MEMORY q100_unclassified "q100_unclassified[0]"
    PRAGMA FILTER-NODE q100_classified "{'module':'standard.filters.classifiers','filter_type':'SingleQLinear','source':'q10_ro_rx/filter','publish':false,'params':{'a':[1.0,0.0],'threshold':0.01},'_type':'FilterNode'}"
    PRAGMA FILTER-NODE q100 "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q100_classified','publish':true,'params':{},'_type':'FilterNode'}"
    FENCE 100
