quil-rs/tests/snapshots/calibration_test__calibration_rx.quil.snap
---
source: quil-rs/tests/calibration_test.rs
expression: program.to_quil_or_debug()
---
DEFCAL RX(pi/2) 0:
    FENCE 0
    NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.1, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.1, t0: 1e-8)
    FENCE 0
DEFCAL RX(-pi/2) 0:
    FENCE 0
    NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.2, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.2, t0: 1e-8)
    FENCE 0
DEFCAL RX(pi) 0:
    FENCE 0
    NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.3, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.3, t0: 1e-8)
    FENCE 0
DEFCAL RX(-pi) 0:
    FENCE 0
    NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.4, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.4, t0: 1e-8)
    FENCE 0
DEFCAL RX(pi/2) 3:
    FENCE 3
    NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.1, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.1, t0: 1e-8)
    FENCE 3
DEFCAL RX(-pi/2) 3:
    FENCE 3
    NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.2, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.2, t0: 1e-8)
    FENCE 3
DEFCAL RX(pi) 3:
    FENCE 3
    NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.3, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.3, t0: 1e-8)
    FENCE 3
DEFCAL RX(-pi) 3:
    FENCE 3
    NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.4, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.4, t0: 1e-8)
    FENCE 3
