quil-rs/tests/snapshots/calibration_test__calibration_xy.quil.snap
---
source: quil-rs/tests/calibration_test.rs
expression: program.to_quil_or_debug()
---
DEFCAL XY(%theta) 110 111:
    FENCE
    SHIFT-PHASE 110 111 "xy" 0.4
    NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
    SHIFT-PHASE 110 111 "xy" -0.4
    SHIFT-PHASE 110 111 "xy" 1.8+(-0.5*%theta)
    NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
    SHIFT-PHASE 110 111 "xy" -1*(1.8+(-0.5*%theta))
    DELAY 110 "rf" 1.2e-7
    SHIFT-PHASE 110 "rf" 0.8
    DELAY 111 "rf" 1.2e-7
    SHIFT-PHASE 111 "rf" 0.4
    SHIFT-PHASE 111 "rf" 0.5*%theta
    SHIFT-PHASE 110 "rf" -0.5*%theta
    FENCE
    SHIFT-PHASE 110 111 "xy" 0.4
    SHIFT-PHASE 110 117 "xy" 0.4
    SHIFT-PHASE 110 111 "xy" -0.2
    SHIFT-PHASE 111 112 "xy" -0.2
    SHIFT-PHASE 111 126 "xy" -0.2
    SHIFT-PHASE 110 111 "xy" -0.25*%theta
    SHIFT-PHASE 111 112 "xy" -0.25*%theta
    SHIFT-PHASE 111 126 "xy" -0.25*%theta
    SHIFT-PHASE 110 111 "xy" -0.25*%theta
    SHIFT-PHASE 110 117 "xy" -0.25*%theta
DEFCAL XY(%theta) 111 110:
    FENCE
    SHIFT-PHASE 110 111 "xy" 0.4
    NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
    SHIFT-PHASE 110 111 "xy" -0.4
    SHIFT-PHASE 110 111 "xy" 1.8+(-0.5*%theta)
    NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
    SHIFT-PHASE 110 111 "xy" -1*(1.8+(-0.5*%theta))
    DELAY 110 "rf" 1.2e-7
    SHIFT-PHASE 110 "rf" 0.8
    DELAY 111 "rf" 1.2e-7
    SHIFT-PHASE 111 "rf" 0.4
    SHIFT-PHASE 111 "rf" 0.5*%theta
    SHIFT-PHASE 110 "rf" -0.5*%theta
    FENCE
    SHIFT-PHASE 110 111 "xy" 0.4
    SHIFT-PHASE 110 117 "xy" 0.4
    SHIFT-PHASE 110 111 "xy" -0.2
    SHIFT-PHASE 111 112 "xy" -0.2
    SHIFT-PHASE 111 126 "xy" -0.2
    SHIFT-PHASE 110 111 "xy" -0.25*%theta
    SHIFT-PHASE 111 112 "xy" -0.25*%theta
    SHIFT-PHASE 111 126 "xy" -0.25*%theta
    SHIFT-PHASE 110 111 "xy" -0.25*%theta
    SHIFT-PHASE 110 117 "xy" -0.25*%theta
